# FordCircles

./: .gitignore  FordCircles.cabal  FordCircles.hs  Makefile  default.nix  flake.nix  shell.nix
fonts/: ttf2svg.sh
nix/: default.nix  overlay.nix  shell.nix
